--- a/AMS/Views/Shared/_sidebar-nav.cshtml
+++ b/AMS/Views/Shared/_sidebar-nav.cshtml
@@ -51,12 +51,12 @@
                     <span class="badge badge-primary"></span>
                 </a>
             </li>
-            <li class="nav-item">
+            @*<li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="My" asp-action="TodoTasks">
                     <i class="nav-icon fa fa-tasks"></i> Task List
                     <span class="badge badge-primary"></span>
                 </a>
-            </li>
+            </li>*@
             <li class="nav-item">
                 <a class="nav-link" asp-area="" asp-controller="My" asp-action="UserGroups">
                     <i class="nav-icon fa fa-users"></i> My User Groups
