--- a/AMS/Views/BankApp/Post.cshtml
+++ b/AMS/Views/BankApp/Post.cshtml
@@ -31,7 +31,7 @@
                             <strong class="mr-1">Attachments: </strong>
                             @foreach (var att in Model.Attachments)
                             {
-                                <a href="@att.Url" class="btn-link m-1 font-weight-bold"><i class="fa fa-file"></i> @att.Title</a>
+                                <a href="@att.Url" class="btn-link m-1"><i class="fa fa-file"></i> @att.Title</a>
                             }
                         </div>
                     </div>
@@ -123,10 +123,10 @@
                                         <input asp-for="Deadline" class="form-control" />
                                     </div>
                                     <div class="col-3">
-                                        <input asp-for="MonthNo" class="form-control invisible" />
+                                        <input title="Month No." asp-for="MonthNo" class="form-control invisible" />
                                     </div>
                                     <div class="col-3">
-                                        <input asp-for="DayNo" class="form-control invisible" />
+                                        <input title="Day No." asp-for="DayNo" class="form-control invisible" />
                                     </div>
                                 </div>
                             </div>
@@ -155,17 +155,11 @@
                     {
                         <div class="row">
                             <div class="ml-2 col-10">
-                               
+
                                 <input type="submit" name="submit" value="Save" class="btn btn-primary" />
                                 @if (Model.Status == AMS.ViewModels.BankApp.PostStatus.New)
                                 {
                                     <input type="submit" name="submit" value="Submit" class="btn btn-primary ml-1" />
-                                }
-
-                                @if (Model.Status == AMS.ViewModels.BankApp.PostStatus.InProgress && Model.PostTasks.All(x => x.IsDone))
-                                {
-                                    <input type="submit" name="submit" value="Create Outgoing Letter" class="btn btn-success ml-1" />
-
                                 }
 
                                 @if (Model.CanBeClosed)
@@ -200,7 +194,9 @@
                         </div>
                         @if (User.Identity.Name == "assistant" || User.Identity.Name == "ceo")
                         {
+
                             <!-- Assignments -->
+
                             <div class="row">
                                 <div class="col-md-10 mb-1">
                                     <h5>Responsible People</h5>
@@ -257,65 +253,108 @@
             </form>
         }
 
-        @if (Model.Status != AMS.ViewModels.BankApp.PostStatus.New && Model.Status != AMS.ViewModels.BankApp.PostStatus.Pending)
+        @if (Model.Status != AMS.ViewModels.BankApp.PostStatus.Pending && Model.Status != AMS.ViewModels.BankApp.PostStatus.New)
         {
-            @for (var i = 0; i < Model.PostTasks.Count; i++)
+            <!-- Response Task -->
+            @if (Model.ResponseTask != null)
             {
-                <form asp-action="@ViewBag.Action_PROGRESS" method="post" enctype="multipart/form-data" class="form-horizontal">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="row">
-                                <input name="ticketId" type="hidden" asp-for="@Model.Id" />
-                                <input name="taskId" type="hidden" asp-for="@Model.PostTasks[i].Id" />
-                                <input name="userName" type="hidden" asp-for="@Model.PostTasks[i].UserName" />
-                                @if (Model.PostTasks[i].SortId == -1)
+                if (Model.ResponseTask.StartDate.HasValue)
+                {
+                    <form asp-action="@ViewBag.Action_PROGRESS" method="post" enctype="multipart/form-data" class="form-horizontal">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <input name="ticketId" type="hidden" asp-for="@Model.Id" />
+                                    <input name="taskId" type="hidden" asp-for="@Model.ResponseTask.Id" />
+                                </div>
+                                @if (Model.ResponseTask.IsLocked)
                                 {
-                                    <!-- PostTask OutRef Input -->
-                                    <div class="form-group col-12">
-                                        <label asp-for="@Model.LetterOutReference" class="col-md-12 col-form-label"></label>
-                                        <div class="col-md-12 mt-1">
-                                            <input name="outRef" asp-for="@Model.LetterOutReference" class="form-control" />
+                                    <div class="row">
+                                        <!-- CheckoutByName Input -->
+                                        <div class="form-group col-12">
+                                            <label asp-for="@Model.ResponseTask.CheckOutByName" class="col-md-12 col-form-label">Checkout By</label>
+                                            <div class="col-md-12">
+                                                <input readonly asp-for="@Model.ResponseTask.CheckOutByName" class="form-control" />
+                                            </div>
                                         </div>
                                     </div>
-                                }
-                                <!-- PostTask Comments Input -->
-                                <div class="form-group col-12">
-                                    <label asp-for="@Model.PostTasks[i].Comments" class="col-md-12 col-form-label">
-                                        @if (Model.PostTasks[i].SortId == -1)
-                                        {
-                                            <text>Outgoing Letter Comments</text>
-                                        }
-                                        else
-                                        {
-                                            <text>@Model.PostTasks[i].ResponsilePerson Comments</text>
-                                        }
-                                    </label>
-                                    <div class="col-md-12">
-                                        <textarea name="comments" rows="3" asp-for="@Model.PostTasks[i].Comments" class="form-control"></textarea>
+                                    <div class="row">
+                                        <!-- CheckoutDate Input -->
+                                        <div class="form-group col-12">
+                                            <label asp-for="@Model.ResponseTask.CheckOutDate" class="col-md-12 col-form-label">Checkout Date</label>
+                                            <div class="col-md-12">
+                                                <input readonly asp-for="@Model.ResponseTask.CheckOutDate" class="form-control" />
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="col-md-12 mt-1">
-                                        <input name="workFiles" type="file" multiple asp-for="@Model.PostTasks[i].WorkFiles" class="form-control" />
-                                    </div>
-                                </div>
-                            </div>
 
-                            @if (User.Identity.Name == Model.PostTasks[i].UserName)
-                            {
+                                    @if (User.Identity.Name == Model.ResponseTask.CheckOutBy)
+                                    {
+                                        <div class="row">
+                                            <!-- Document Input -->
+                                            <div class="form-group col-3">
+                                                <label asp-for="@Model.ResponseTask.MainFile" class="col-md-12 col-form-label">Upload Updated Response Document</label>
+                                                <div class="col-md-12">
+                                                    <input type="file" name="mainFile" asp-for="@Model.ResponseTask.MainFile" class="form-control" />
+                                                </div>
+                                            </div>
+                                        </div>
+                                    }
+                                }
+                                else
+                                {
+
+                                }
+
                                 <div class="row">
-                                    <div class="ml-2 col-10">
-                                        @if (Model.Status == AMS.ViewModels.BankApp.PostStatus.InProgress || Model.Status == AMS.ViewModels.BankApp.PostStatus.Incomplete)
-                                        {
-                                            <input type="submit" name="submit" value="Save" class="btn btn-primary" />
-                                            <input type="submit" name="submit" value="Submit" class="btn btn-primary ml-1" />
-                                        }
+                                    <!-- Files Input -->
+                                    <div class="form-group col-3">
+                                        <label asp-for="@Model.ResponseTask.WorkFiles" class="col-md-12 col-form-label">Attachements</label>
+                                        <div class="col-md-12">
+                                            <input type="file" name="workFiles" multiple asp-for="@Model.ResponseTask.WorkFiles" class="form-control" />
+                                        </div>
                                     </div>
                                 </div>
-                            }
+                                <a class="btn btn-primary" href="~/files/@Model.Id/LetterResponse.docx">Preview</a>
+                                <input type="submit" name="submit" value="Upload Attachments" class="btn btn-primary ml-1" />
+
+                                @if (!Model.ResponseTask.IsLocked && Model.Status != AMS.ViewModels.BankApp.PostStatus.Completed)
+                                {
+                                    <input type="submit" name="submit" value="Edit" class="btn btn-primary ml-1" />
+                                }
+                                else
+                                {
+                                    @if (Model.ResponseTask.CheckOutBy == User.Identity.Name && Model.Status != AMS.ViewModels.BankApp.PostStatus.Completed)
+                                    {
+                                        <input type="submit" name="submit" value="Submit" class="btn btn-primary ml-1" />
+                                    }
+                                }
+
+                            </div>
                         </div>
-                    </div>
-                </form>
+                    </form>
+                }
+                else
+                {
+                    <form asp-action="@ViewBag.Action_PROGRESS" method="post" enctype="multipart/form-data" class="form-horizontal">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="row">
+                                    <input name="ticketId" type="hidden" asp-for="@Model.Id" />
+                                    <input name="taskId" type="hidden" asp-for="@Model.ResponseTask.Id" />
+                                </div>
+                                @if (Model.Status != AMS.ViewModels.BankApp.PostStatus.Completed)
+                                {
+                                    <input type="submit" name="submit" value="Start Response" class="btn btn-primary" />
+                                }
+                            </div>
+                        </div>
+                    </form>
+                }
             }
         }
+
+
 
 
     </div>
@@ -337,29 +376,34 @@
                 if ($("#DeadlineType").val() == 0) {
                     // OnlyOnce
                     $("#Deadline").removeAttr("readonly");
+                    $("#Deadline").removeClass("invisible");
                     $("#DayNo").addClass("invisible");
                     $("#MonthNo").addClass("invisible");
                 }
                 else if ($("#DeadlineType").val() == 1) {
                     // Monthly
                     $("#Deadline").attr("readonly", true);
+                    $("#Deadline").addClass("invisible");
                     $("#DayNo").removeClass("invisible");
                     $("#MonthNo").addClass("invisible");
                 }
                 else if ($("#DeadlineType").val() == 2) {
                     // Quarterly
                     $("#Deadline").attr("readonly", true);
+                    $("#Deadline").addClass("invisible");
                     $("#DayNo").removeClass("invisible");
                     $("#MonthNo").removeClass("invisible");
                 }
                 else if ($("#DeadlineType").val() == 3) {
                     // Annual
                     $("#Deadline").attr("readonly", true);
+                    $("#Deadline").addClass("invisible");
                     $("#DayNo").removeClass("invisible");
                     $("#MonthNo").removeClass("invisible");
                 }
                 else {
                     $("#Deadline").removeAttr("readonly");
+                    $("#Deadline").removeClass("invisible");
                     $("#DayNo").addClass("invisible");
                     $("#MonthNo").addClass("invisible");
                 }
