Modifications to bank app

--- a/AMS/Views/BankApp/Index.cshtml
+++ b/AMS/Views/BankApp/Index.cshtml
@@ -29,7 +29,7 @@
                                 @Html.DisplayNameFor(model => model.LetterReference)
                             </th>
                             <th data-field="outref" data-visible="false" data-sortable="true" data-filter-control="input">
-                                @Html.DisplayNameFor(model => model.LetterOutReference)
+                                Outgoing Letter Ref. 
                             </th>
                             <th data-field="from" data-sortable="true" data-filter-control="select">
                                 @Html.DisplayNameFor(model => model.From)
@@ -90,10 +90,10 @@
                                 Duration (days)
                             </th>
                             <th data-field="letterSent" data-visible="false" data-sortable="true" data-filter-control="input">
-                                Response Sent On
+                                Response Mailed On
                             </th>
                             <th data-field="letterDelivered" data-visible="false" data-sortable="true" data-filter-control="input">
-                                Response Delivered On
+                                Response Receipt Delivered On
                             </th>
                         </tr>
                     </thead>
