--- a/AMS/Views/BankApp/Post.cshtml
+++ b/AMS/Views/BankApp/Post.cshtml
@@ -5,6 +5,7 @@
     ViewData["Action_ASSISTANT"] = "PostAssistant";
     ViewData["Action_CEO"] = "PostCeo";
     ViewData["Action_PROGRESS"] = "PostProgress";
+    ViewData["Action_MAIL"] = "PostMail";
 }
 
 <partial name="_Top" />
@@ -24,6 +25,7 @@
                     <!-- Id Hidden -->
                     <input id="idAssistant" type="hidden" asp-for="Id" />
                     <input id="statusAssistant" type="hidden" asp-for="Status" />
+                    <input id="letterOut" type="hidden" asp-for="LetterOutReference" />
 
                     <!-- Attachements URL -->
                     <div class="row mb-2">
@@ -66,13 +68,7 @@
                             <div class="col-md-12">
                                 <input asp-for="LetterReference" class="form-control" />
                             </div>
-                            @if (!string.IsNullOrEmpty(Model.LetterOutReference))
-                            {
-                                <label asp-for="LetterOutReference" class="col-md-12 col-form-label"></label>
-                                <div class="col-md-12">
-                                    <input asp-for="LetterOutReference" class="form-control" />
-                                </div>
-                            }
+
                         </div>
 
                         <!-- ReceivedOn Input -->
@@ -151,25 +147,7 @@
                         </div>
                     </div>
 
-                    @if(Model.ResponseTask != null  && !Model.ResponseTask.IsLocked)
-                    {
-                <div class="row">
-                    <!-- LetterSentOn Input -->
-                    <div class="form-group col-3">
-                        <label asp-for="LetterSentOn" class="col-md-12 col-form-label">Response Sent On</label>
-                        <div class="col-md-12">
-                            <input asp-for="LetterSentOn" class="form-control" />
-                        </div>
-                    </div>
-                    <!-- LetterDeliveredOn Input -->
-                    <div class="form-group col-3">
-                        <label asp-for="LetterDeliveredOn" class="col-md-12 col-form-label">Response Delivered On</label>
-                        <div class="col-md-12">
-                            <input asp-for="LetterDeliveredOn" class="form-control" />
-                        </div>
-                    </div>
-                </div>
-                    }
+
 
                     @if (User.Identity.Name == "assistant")
                     {
@@ -335,24 +313,69 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a class="btn btn-primary" href="~/files/@Model.Id/LetterResponse.docx">Preview</a>
-                                <input type="submit" name="submit" value="Upload Attachments" class="btn btn-primary ml-1" />
+                                <a class="btn btn-primary" href="~/files/@Model.Id/LetterResponse.docx">Preview Response</a>
+                                <input type="submit" name="submit" value="Upload Files" class="btn btn-primary ml-1" />
 
                                 @if (!Model.ResponseTask.IsLocked && Model.Status != AMS.ViewModels.BankApp.PostStatus.Completed)
                                 {
-                                    <input type="submit" name="submit" value="Edit" class="btn btn-primary ml-1" />
+                                    <input type="submit" name="submit" value="Checkout Response" class="btn btn-primary ml-1" />
                                 }
                                 else
                                 {
                                     @if (Model.ResponseTask.CheckOutBy == User.Identity.Name && Model.Status != AMS.ViewModels.BankApp.PostStatus.Completed)
                                     {
-                                        <input type="submit" name="submit" value="Submit" class="btn btn-primary ml-1" />
+                                        <input type="submit" name="submit" value="Checkin Response" class="btn btn-primary ml-1" />
                                     }
                                 }
 
                             </div>
                         </div>
                     </form>
+                    @if (!Model.ResponseTask.IsLocked)
+                    {
+                        <form asp-action="@ViewBag.Action_MAIL" method="post" enctype="multipart/form-data" class="form-horizontal">
+                            <div class="card">
+                                <div class="card-body">
+                                    <div class="row">
+                                        <input name="ticketId" type="hidden" asp-for="@Model.Id" />
+                                    </div>
+                                    <div class="row">
+                                        <div class="form-group col-12">
+
+                                                <label asp-for="LetterOutReference" class="col-md-12 col-form-label">Outgoing Letter Ref.</label>
+                                                <div class="col-md-12">
+                                                    <input asp-for="LetterOutReference" class="form-control" />
+                                                </div>
+                                            
+                                        </div>
+                                        </div>
+                                        @if (Model.ResponseTask != null && !Model.ResponseTask.IsLocked)
+                                        {
+                                            <div class="row">
+                                                <!-- LetterSentOn Input -->
+                                                <div class="form-group col-6">
+                                                    <label asp-for="LetterSentOn" class="col-md-12 col-form-label">Response Mailed On</label>
+                                                    <div class="col-md-12">
+                                                        <input asp-for="LetterSentOn" class="form-control" />
+                                                    </div>
+                                                </div>
+                                                <!-- LetterDeliveredOn Input -->
+                                                <div class="form-group col-6">
+                                                    <label asp-for="LetterDeliveredOn" class="col-md-12 col-form-label">Response Receipt Delivered On</label>
+                                                    <div class="col-md-12">
+                                                        <input asp-for="LetterDeliveredOn" class="form-control" />
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+
+
+                                    <input type="submit" name="submit" value="Save" class="btn btn-primary" />
+                                </div>
+                            </div>
+                        </form>
+                    }
+
                 }
                 else
                 {
